--- a/Quake/Binaries/ALL_BUILD.vcxproj.filters
+++ b/Quake/Binaries/ALL_BUILD.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <CustomBuild Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\CMakeLists.txt" />
+    <CustomBuild Include="D:\GitHub\RaultG-Prog2\Quake\CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
