--- a/Quake/Binaries/Quake.vcxproj.filters
+++ b/Quake/Binaries/Quake.vcxproj.filters
@@ -1,78 +1,101 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Main.cpp" />
-    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\AActor.cpp">
-      <Filter>Runtime</Filter>
+    <ClCompile Include="D:\GitHub\RaultG-Prog2\Quake\Source\Editor\Garbage\GarbageCollector.cpp">
+      <Filter>Editor\Garbage</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\Core\Containers\FString.cpp">
+    <ClCompile Include="D:\GitHub\RaultG-Prog2\Quake\Source\Editor\Pointers\TObjectPtr.cpp">
+      <Filter>Editor\Pointers</Filter>
+    </ClCompile>
+    <ClCompile Include="D:\GitHub\RaultG-Prog2\Quake\Source\Editor\Pointers\TSharedPtr.cpp">
+      <Filter>Editor\Pointers</Filter>
+    </ClCompile>
+    <ClCompile Include="D:\GitHub\RaultG-Prog2\Quake\Source\Editor\Pointers\TWeakPtr.cpp">
+      <Filter>Editor\Pointers</Filter>
+    </ClCompile>
+    <ClCompile Include="D:\GitHub\RaultG-Prog2\Quake\Source\Main.cpp" />
+    <ClCompile Include="D:\GitHub\RaultG-Prog2\Quake\Source\Runtime\Actor\AActor.cpp">
+      <Filter>Runtime\Actor</Filter>
+    </ClCompile>
+    <ClCompile Include="D:\GitHub\RaultG-Prog2\Quake\Source\Runtime\Component\UActorComponent.cpp">
+      <Filter>Runtime\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="D:\GitHub\RaultG-Prog2\Quake\Source\Runtime\Core\Containers\FString.cpp">
       <Filter>Runtime\Core\Containers</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\Core\Containers\TArray.cpp">
+    <ClCompile Include="D:\GitHub\RaultG-Prog2\Quake\Source\Runtime\Core\Containers\TArray.cpp">
       <Filter>Runtime\Core\Containers</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\GarbageCollector.cpp">
-      <Filter>Runtime</Filter>
+    <ClCompile Include="D:\GitHub\RaultG-Prog2\Quake\Source\Runtime\Core\UObject.cpp">
+      <Filter>Runtime\Core</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\TSharedPtr.cpp">
-      <Filter>Runtime</Filter>
+    <ClCompile Include="D:\GitHub\RaultG-Prog2\Quake\Source\Runtime\GameInstance\UGameInstance.cpp">
+      <Filter>Runtime\GameInstance</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\TWeakPtr.cpp">
-      <Filter>Runtime</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\UActorComponent.cpp">
-      <Filter>Runtime</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\UGameInstance.cpp">
-      <Filter>Runtime</Filter>
-    </ClCompile>
-    <ClCompile Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\UObject.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Editor\Macro.h">
-      <Filter>Editor</Filter>
+    <ClInclude Include="D:\GitHub\RaultG-Prog2\Quake\Source\CoreMinimal.h" />
+    <ClInclude Include="D:\GitHub\RaultG-Prog2\Quake\Source\Editor\Garbage\GarbageCollector.h">
+      <Filter>Editor\Garbage</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\AActor.h">
-      <Filter>Runtime</Filter>
+    <ClInclude Include="D:\GitHub\RaultG-Prog2\Quake\Source\Editor\Pointers\TObjectPtr.h">
+      <Filter>Editor\Pointers</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\Core\Containers\FString.h">
+    <ClInclude Include="D:\GitHub\RaultG-Prog2\Quake\Source\Editor\Pointers\TSharedPtr.h">
+      <Filter>Editor\Pointers</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\GitHub\RaultG-Prog2\Quake\Source\Editor\Pointers\TWeakPtr.h">
+      <Filter>Editor\Pointers</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\GitHub\RaultG-Prog2\Quake\Source\Runtime\Actor\AActor.h">
+      <Filter>Runtime\Actor</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\GitHub\RaultG-Prog2\Quake\Source\Runtime\Component\UActorComponent.h">
+      <Filter>Runtime\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="D:\GitHub\RaultG-Prog2\Quake\Source\Runtime\Core\Containers\FString.h">
       <Filter>Runtime\Core\Containers</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\Core\Containers\TArray.h">
+    <ClInclude Include="D:\GitHub\RaultG-Prog2\Quake\Source\Runtime\Core\Containers\TArray.h">
       <Filter>Runtime\Core\Containers</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\GarbageCollector.h">
-      <Filter>Runtime</Filter>
+    <ClInclude Include="D:\GitHub\RaultG-Prog2\Quake\Source\Runtime\Core\UObject.h">
+      <Filter>Runtime\Core</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\TSharedPtr.h">
-      <Filter>Runtime</Filter>
+    <ClInclude Include="D:\GitHub\RaultG-Prog2\Quake\Source\Runtime\GameInstance\UGameInstance.h">
+      <Filter>Runtime\GameInstance</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\TWeakPtr.h">
-      <Filter>Runtime</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\UActorComponent.h">
-      <Filter>Runtime</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\Runtime\UGameInstance.h">
-      <Filter>Runtime</Filter>
-    </ClInclude>
-    <ClInclude Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\Source\UObject.h" />
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="C:\Users\User\GitHub\RaultG-Prog2\Quake\CMakeLists.txt" />
+    <CustomBuild Include="D:\GitHub\RaultG-Prog2\Quake\CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Editor">
-      <UniqueIdentifier>{E6883661-7A7C-33BE-807F-C6F56D20839D}</UniqueIdentifier>
+      <UniqueIdentifier>{5CD59386-3823-3CFB-85E8-B631E04D3C74}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Editor\Garbage">
+      <UniqueIdentifier>{86AA9C0B-A13C-3EF3-8079-F207E570494B}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Editor\Pointers">
+      <UniqueIdentifier>{F56E532D-A853-38D4-B4B4-6462BD63120E}</UniqueIdentifier>
     </Filter>
     <Filter Include="Runtime">
-      <UniqueIdentifier>{F6E5735C-1519-3C21-B738-44B8A2015A0F}</UniqueIdentifier>
+      <UniqueIdentifier>{4AD5EB30-210E-3E9C-8055-44CFEBF810E3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Runtime\Actor">
+      <UniqueIdentifier>{4D874FA0-32A2-3F10-A29F-E28E6C354926}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Runtime\Component">
+      <UniqueIdentifier>{47EE5371-0238-3250-9007-408046DB57A8}</UniqueIdentifier>
     </Filter>
     <Filter Include="Runtime\Core">
-      <UniqueIdentifier>{3E8EA0D5-FD5A-3B4C-977D-306285DEF39C}</UniqueIdentifier>
+      <UniqueIdentifier>{C7929BE5-D480-333A-8173-0AC43E096410}</UniqueIdentifier>
     </Filter>
     <Filter Include="Runtime\Core\Containers">
-      <UniqueIdentifier>{870F1BAB-0DE4-3013-B9BE-2190DD2470A8}</UniqueIdentifier>
+      <UniqueIdentifier>{E55D5D3B-5BFD-39BD-A904-53716E6CE0A5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Runtime\GameInstance">
+      <UniqueIdentifier>{2A76E526-4C48-341E-891D-61828553F883}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
